restart and kaggle

--- a/stylegan2colab.ipynb
+++ b/stylegan2colab.ipynb
@@ -103,27 +103,27 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "j_nlSGYxZBit",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xNn4N5Vkh_JP",
+        "colab_type": "text"
       },
       "source": [
-        "!pip install gallery-dl"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "get your dataset or use kaggle to fetch a dataset"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CfhN7EXQZmz4",
+        "id": "_h4RZkSJiCYE",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "!gallery-dl --range 1-1000 url"
+        "import os\n",
+        "os.environ['KAGGLE_USERNAME'] = \"xxxxxx\" # username from the json file\n",
+        "os.environ['KAGGLE_KEY'] = \"xxxxxxxxxxxxxxxxxxxxxxxxxxxx\" # key from the json file\n",
+        "!kaggle datasets download -d user/dataset-name"
       ],
       "execution_count": 0,
       "outputs": []
@@ -161,7 +161,7 @@
         "colab_type": "text"
       },
       "source": [
-        "reset runtime for augmentor "
+        "restart runtime for augmentor "
       ]
     },
     {
